Closed Bug 1632100 Opened 5 years ago Closed 5 years ago

[Wayland] Fix nsWindow::SetFocus() on Wayland.

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla77
Tracking Status
firefox77 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

nsWindow::SetFocus() does not work on Wayland, we need to fix that to run mozilla testsuite.

Pushed by ccoroiu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/5c89864fbe03 [Wayland] Emulate window focus change by window hide/show when running in testsuite, r=jhorak
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla77
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: