Bug 1632100 [Wayland] Emulate window focus change by window hide/show when running in testsuite, r=jhorak

Differential Revision: https://phabricator.services.mozilla.com/D71926